# CASTEL_POO_2024

./: .gitignore  CASTEL_13784.rar  README.md
CASTEL_13784/: CMakeLists.txt  main.cpp
CASTEL_13784_TP01/ejercicio1/: ejercicio1_tp1.cpp
CASTEL_13784_TP01/ejercicio2/: ejercicio2_tp1.py
CASTEL_13784_TP01/ejercicio3/: README.txt  ejercicio3_tp1.cpp
CASTEL_13784_TP01/ejercicio4/: ejercicio4_tp1.py
L13784_TP2/L13784_TP2_2/codigo/: CMakeLists.txt  controlador.cpp  controlador.h  xmlWriter.cpp
L13784_TP2/L13784_TP2_3/codigo/: CMakeLists.txt  cfgFile.cpp  consoleLogger.h  controladorSensores.cpp  controladorSensores.h  logger.h  main.cpp  medicion.cpp  medicion.h  sensorA.cpp  sensorA.h
L13784_TP3_v2/L31783_TP3/: L13784_TP3.sln
TP2/diagrama_tp2/: diagrama_tp2.prj  generation_settings
TP2/ejercicio1/: DatosSerial.py  ManejoArchivo.py  archivos.py  archivoshandler.py  datosserial.py  iarchivos.py  idataparser.py  idatasource.py  main.py  mainapp.py  menu.py  parserall.py  platform.py  prueba.csv  prueba.py  prueba1.csv  prueba4.csv  pruebaEj2.csv
TP2/ejercicio2/: controlador.cpp  controlador.h  csvParser.h  (+4 more)
TP2/ejercicio3/: CMakeLists.txt  cfgFile.cpp  consoleLogger.h  controladorSensores.cpp  controladorSensores.h  main.cpp  medicion.cpp  medicion.h  sensor.cpp  sensor.h  sensorA.cpp  sensorB.cpp  sensorB.h  sensorC.cpp  sensorC.h  uml_ejercicio3.xmi
curso_learncpp/: CMakeLists.txt  test.cpp
practicaParcial/: CMakeLists.txt  Dron.cpp  Dron.h  Registro.cpp  Registro.h  Reporte.cpp  Reporte.h  castel.cpp  controladorDron.py
untitled/: main.cpp  material.csv
(+155 files in other folders)
